--- a/vue-easyjur/package.json
+++ b/vue-easyjur/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.7",
+    "chart.js": "^3.7.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.0",
     "vue": "^2.6.11",
+    "vue-echarts": "^6.0.2",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
